# aws-ai-devbox-mac

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE-docs  Makefile  NOTICE  README.md  SECURITY.md  create_repo.sh  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-build.yml  lint-validate.yml  python.yml  terraform.yml
ai/: README.md  pyproject.toml
ai/notebooks/: bedrock_quickstart.ipynb  sagemaker_training.ipynb
ai/src/: bedrock_example.py  langchain_bedrock_example.py
ai/src/inference/: app.py
ai/src/sagemaker/: train_script.py
bootstrap/: install_aws_tools.sh  install_cli_mac.sh  install_devtools.sh  install_homebrew.sh  install_iac.sh  install_langs.sh  post_install.sh
docker/: Makefile
docker/sagemaker-inference/: Dockerfile  requirements.txt
docs/: 00-prereqs.md  01-aws-sso.md  02-python.md  03-docker.md  04-terraform-terragrunt.md  05-bedrock.md  06-sagemaker.md  07-security.md
examples/: __init__.py
examples/bedrock/: __init__.py  bedrock_examples.py  bedrock_quickstart.ipynb  bedrock_rag.py
examples/sagemaker/: __init__.py  inference.py  sagemaker_quickstart.ipynb  training.py
infra/: global.tf
infra/modules/backend/: main.tf
infra/modules/ecr/: main.tf
infra/modules/iam/: main.tf
infra/modules/vpc/: main.tf
scripts/: bootstrap.sh  ecr-push.sh
terraform/live/: terragrunt.hcl
terraform/live/dev/bedrock/: terragrunt.hcl
terraform/live/dev/sagemaker/: terragrunt.hcl
terraform/live/prod/bedrock/: terragrunt.hcl
terraform/live/prod/sagemaker/: terragrunt.hcl
terraform/modules/bedrock/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/sagemaker/: README.md  main.tf  outputs.tf  variables.tf
terragrunt/: terragrunt.hcl
terragrunt/envs/dev/: terragrunt.hcl
terragrunt/envs/prod/: terragrunt.hcl
