[tool.poetry]
name = "aws-ai-devbox"
version = "0.1.0"
description = "Mac bootstrap for AWS work on Bedrock and SageMaker"
authors = ["AWS AI DevBox Contributors"]
readme = "README.md"
packages = [{include = "examples"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.0"
sagemaker = "^2.200.0"
jupyter = "^1.0.0"
jupyterlab = "^4.0.0"
notebook = "^7.0.0"
ipykernel = "^6.27.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
scikit-learn = "^1.3.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
ruff = "^0.1.8"
mypy = "^1.7.0"
pre-commit = "^3.6.0"
ipython = "^8.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
