[tool.poetry]
name = "ai-env"
version = "0.1.0"
description = "AI/ML development environment for AWS Bedrock and SageMaker"
authors = ["AWS Solutions Architect"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.0"
botocore = "^1.35.0"
boto3-stubs = {extras = ["bedrock", "bedrock-runtime", "sagemaker", "sagemaker-runtime"], version = "^1.35.0"}
sagemaker = "^2.230.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
jupyterlab = "^4.2.0"
ipykernel = "^6.29.0"
matplotlib = "^3.9.0"
langchain = "^0.3.0"
langchain-aws = "^0.2.0"
pydantic = "^2.9.0"
httpx = "^0.27.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
black = "^24.8.0"
isort = "^5.13.0"
mypy = "^1.11.0"
pytest = "^8.3.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B", "A", "C4", "DTZ", "T10", "EM", "ISC", "ICN", "PIE", "PT", "Q", "RSE", "RET", "SIM", "TID", "ARG", "PLE", "PLR", "PLW", "RUF"]
ignore = ["ANN101", "ANN102", "S101"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
